--- a/styles/popup.css
+++ b/styles/popup.css
@@ -5,19 +5,66 @@ body {
   padding: 40px;
   background-color: #f0e5e5;
   color: #464646;
-  width: 400px;
+  width: 600px;
   margin: 0 auto;
 }
 
 h2 {
-  font-size: 28px;
+  font-size: 32px;
   margin-bottom: 20px;
   color: #3d3d3d;
 }
 
+h3 {
+  font-size: 26px;
+  margin-bottom: 15px;
+  color: #3d3d3d;
+}
+
 p {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 30px;
+}
+
+.section-links {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.link {
+  flex-grow: 1;
+  padding: 20px;
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+  color: #464646;
+  font-size: 18px;
+}
+
+.link:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: transparent;
+  transition: background-color 0.3s;
+}
+
+.link:hover {
+  color: black;
+}
+
+.link.active:before {
+  background-color: black;
+}
+
+.content-section {
+  margin-bottom: 30px;
+  padding: 30px;
+  border-radius: 0 0 15px 15px;
+  background-color: #fff;
 }
 
 form {
@@ -27,23 +74,29 @@ form {
 }
 
 label, input {
-  flex-basis: 48%;
-  margin-bottom: 10px;
+  width: 48%; 
+  box-sizing: border-box; 
+  margin-bottom: 15px;
   text-align: left;
+  font-size: 16px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 button {
   flex-basis: 100%;
-  padding: 15px;
-  font-size: 18px;
-  background-color: #94d3ac;
+  padding: 20px;
+  font-size: 20px;
+  background-color: grey;
   color: #fff;
   border: none;
-  border-radius: 10px;
+  border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 button:hover {
-  background-color: #77bb8c;
+  background-color: black;
 }
